--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning Testing with Jest",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/fathan/learn-testing-with-jest/issues"
   },
-  "homepage": "https://github.com/fathan/learn-testing-with-jest#readme"
+  "homepage": "https://github.com/fathan/learn-testing-with-jest#readme",
+  "devDependencies": {
+    "jest": "^22.0.5"
+  }
 }
